[gd_scene load_steps=16 format=4 uid="uid://dh0gg8lf7jnqg"]

[ext_resource type="Script" uid="uid://crhnrohue36tj" path="res://Objects/CoinMachine/coin_machine.gd" id="1_ttn5t"]
[ext_resource type="PackedScene" uid="uid://dwdc85om4xhvs" path="res://Objects/Coin/coin.tscn" id="4_4k8hy"]
[ext_resource type="PackedScene" uid="uid://bwe0g5bx1v4lm" path="res://Objects/CoinMachine/Components/Pusher/pusher.tscn" id="4_5c2ke"]
[ext_resource type="Script" uid="uid://di0kwy2q7vdj4" path="res://Objects/CoinMachine/dropper.gd" id="6_1hgft"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ttn5t"]
size = Vector3(2.62891, 0.333496, 1.10004)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_w4mab"]
load_path = "res://.godot/imported/tape_mesh_lambert2_BaseColor.png-47f3b807100cf47ed82d47483125148d.s3tc.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_4vedo"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_xuo70"]
load_path = "res://.godot/imported/tape_mesh_lambert2_Height.png-6f0e36c685f0b43019a01b79de7cf427.s3tc.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_1hgft"]
load_path = "res://.godot/imported/tape_mesh_lambert2_Metallic.png-4714f2c885141778e21b671fb771d8e2.s3tc.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_i7tb6"]
load_path = "res://.godot/imported/tape_mesh_lambert2_Normal.png-325dfb425c78c0a689570e117d356690.s3tc.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_c8y0w"]
load_path = "res://.godot/imported/tape_mesh_lambert2_Roughness.png-0862cd48de74e83a35668d59ec25480c.s3tc.ctex"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nsj7r"]
albedo_texture = SubResource("CompressedTexture2D_w4mab")
metallic = 1.0
metallic_texture = SubResource("CompressedTexture2D_1hgft")
roughness_texture = SubResource("CompressedTexture2D_c8y0w")
normal_enabled = true
normal_texture = SubResource("CompressedTexture2D_i7tb6")
ao_enabled = true
ao_texture = SubResource("CompressedTexture2D_4vedo")
heightmap_enabled = true
heightmap_texture = SubResource("CompressedTexture2D_xuo70")

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_xuo70"]

[sub_resource type="ArrayMesh" id="ArrayMesh_1hgft"]
_surfaces = [{
"aabb": AABB(-0.111191, -0.485291, -0.0468773, 0.22275, 0.520569, 0.0512075),
"attribute_data": PackedByteArray("UhJDPwOr4j1SEkM/zvhiPwAAgD8AAIA/kznoPb7LPD0AAAAAAAAAAJM56D0AAIA/ujh7P2Qvnz4AAAAAAACAPwAAAABkL58+kznoPb7LPD0AAIA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/ZC+fPgAAAAAAAIA/AAAAAAAAgD8AAIA/AACAPwAAAAAAAAAAAAAAAAAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAgD+TOeg9AACAPwAAAAAAAAAAAACAPwAAAAAAAAAAAAAAAAAAgD8AAIA/AAAAAAAAgD9SEkM/zvhiPwAAAADO+GI/AAAAAAAAgD+6OHs/ZC+fPro4ez8AAIA/AACAPwAAgD9SEkM/zvhiPwAAAAAAAIA/AAAAALvomDwAAIA/u+iYPAAAAAAAAIA/UhJDPwOr4j0AAIA/AAAAAAAAAAAAAAAAAACAPwAAAACTOeg9vss8PaCqYz++yzw9ZC+fPgAAgD9kL58+AAAAAAAAgD8AAIA/AACAPwAAgD8AAAAAAAAAAAAAAAAAAIA/AACAPwAAAACgqmM/vss8PQAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAAAAAACAPwAAgD+76Jg8AAAAAE5oMD8AAAAAAAAAALo4ez8AAAAAoKpjPwAAgD8AAIA/AACAP6CqYz++yzw9AAAAAE5oMD+6OHs/AAAAALo4ez9OaDA/UhJDPwOr4j0AAAAAAAAAAAAAAAADq+I9AAAAAAAAAAAAAIA/AACAPwAAgD8AAAAAAACAPwAAAABSEkM/A6viPQAAgD8AAIA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAA"),
"format": 34359738391,
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 84,
"vertex_data": PackedByteArray("gDqxvQB4+L7oFg69oL6wPQB4+L7oFg69AHnkPQB4+L5oAkC9oL6wPQDgODzA5I07AHnkPQCAED3A5I07oL6wPQB4+L7A5I07oL6wPQB4+L7A5I07oL6wPQDgODzoFg69oL6wPQDgODzA5I07oL6wPQDgODzA5I07ALjjvQCAED3A5I07AHnkPQCAED3A5I07AHnkPQCAED3A5I07AHnkPQCAED1oAkC9AHnkPQB4+L5oAkC9oL6wPQDgODzA5I07oL6wPQDgODzoFg69gDqxvQDgODzoFg69AHnkPQCAED1oAkC9AHnkPQCAED3A5I07ALjjvQCAED1oAkC9AHnkPQB4+L5oAkC9AHnkPQCAED1oAkC9ALjjvQCAED1oAkC9AHnkPQB4+L7A5I07oL6wPQB4+L7A5I07AHnkPQCAED3A5I07AHnkPQB4+L7A5I07AHnkPQCAED3A5I07AHnkPQB4+L5oAkC9AHnkPQB4+L7A5I07oL6wPQB4+L7oFg69oL6wPQB4+L7A5I07oL6wPQDgODzoFg69oL6wPQB4+L7A5I07oL6wPQB4+L7oFg69AHnkPQB4+L5oAkC9oL6wPQB4+L7oFg69AHnkPQB4+L7A5I07oL6wPQB4+L7oFg69gDqxvQB4+L7oFg69oL6wPQDgODzoFg69gDqxvQB4+L7oFg69ALjjvQB4+L5oAkC9ALjjvQB4+L7A5I07ALjjvQCAED3A5I07oL6wPQDgODzA5I07gDqxvQDgODzA5I07gDqxvQDgODzA5I07oL6wPQDgODzA5I07gDqxvQDgODzoFg69ALjjvQCAED1oAkC9AHnkPQCAED3A5I07ALjjvQCAED3A5I07ALjjvQCAED3A5I07gDqxvQDgODzA5I07ALjjvQB4+L7A5I07ALjjvQCAED1oAkC9ALjjvQCAED3A5I07ALjjvQB4+L7A5I07gDqxvQDgODzoFg69oL6wPQDgODzoFg69gDqxvQB4+L7oFg69gDqxvQDgODzA5I07gDqxvQDgODzoFg69gDqxvQB4+L7oFg69gDqxvQB4+L7A5I07ALjjvQB4+L7A5I07gDqxvQDgODzA5I07gDqxvQDgODzA5I07gDqxvQB4+L7oFg69gDqxvQB4+L7A5I07gDqxvQB4+L7oFg69ALjjvQB4+L7A5I07gDqxvQB4+L7A5I07AHnkPQB4+L5oAkC9ALjjvQCAED1oAkC9ALjjvQB4+L5oAkC9ALjjvQB4+L5oAkC9gDqxvQB4+L7oFg69AHnkPQB4+L5oAkC9ALjjvQB4+L7A5I07ALjjvQB4+L5oAkC9ALjjvQCAED1oAkC9/38AAP//AAD/fwAA//8AAP9/AAD//wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8/AAD/f/9/AIAAAP9//38AgAAA/3//fwCA/3//fwAA/z//f/9/AAD/P/9//38AAP8/////f/9//n////9//3/+f////3//f/5//38AAP//////fwAA//////9/AAD//////3//////AAD/f/////8AAP9//////wAA/////wAA/z//////AAD/P/////8AAP8//3//fwAA/z//f/9/AAD/P/9//38AAP8/////f/9//n////9//3/+f////3//f/5//38AAP//AAD/fwAA//8AAP9/AAD//wAAAAD/f/9/AIAAAP9//38AgAAA/3//fwCA/38AAP//AAD/fwAA//8AAP9/AAD//wAA/3//fwAA/7//f/9/AAD/v/9//38AAP+//38AAP//AAD/fwAA//8AAP9/AAD//wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8//38AAP//////fwAA//////9/AAD//////3//////AAD/f/////8AAP9//////wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8/AAD/f/9//n8AAP9//3/+fwAA/3//f/5//3//fwAA/7//f/9/AAD/v/9//38AAP+/////f/9/AID///9//38AgP///3//fwCA/3//fwAA/z//f/9/AAD/P/9//38AAP8/////f/9/AID///9//38AgP///3//fwCA/38AAP//AAD/fwAA//8AAP9/AAD//wAA/////wAA/z//////AAD/P/////8AAP8//38AAP//AAD/fwAA//8AAP9/AAD//wAAAAD/f/9//n8AAP9//3/+fwAA/3//f/5/")
}]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_i7tb6"]
data = PackedVector3Array(-0.0865, -0.4853, -0.0347, 0.0863, -0.4853, -0.0347, 0.1116, -0.4853, -0.0469, 0.0863, 0.0113, 0.0043, 0.1116, 0.0353, 0.0043, 0.0863, -0.4853, 0.0043, 0.0863, -0.4853, 0.0043, 0.0863, 0.0113, -0.0347, 0.0863, 0.0113, 0.0043, 0.0863, 0.0113, 0.0043, -0.1112, 0.0353, 0.0043, 0.1116, 0.0353, 0.0043, 0.1116, 0.0353, 0.0043, 0.1116, 0.0353, -0.0469, 0.1116, -0.4853, -0.0469, 0.0863, 0.0113, 0.0043, 0.0863, 0.0113, -0.0347, -0.0865, 0.0113, -0.0347, 0.1116, 0.0353, -0.0469, 0.1116, 0.0353, 0.0043, -0.1112, 0.0353, -0.0469, 0.1116, -0.4853, -0.0469, 0.1116, 0.0353, -0.0469, -0.1112, 0.0353, -0.0469, 0.1116, -0.4853, 0.0043, 0.0863, -0.4853, 0.0043, 0.1116, 0.0353, 0.0043, 0.1116, -0.4853, 0.0043, 0.1116, 0.0353, 0.0043, 0.1116, -0.4853, -0.0469, 0.1116, -0.4853, 0.0043, 0.0863, -0.4853, -0.0347, 0.0863, -0.4853, 0.0043, 0.0863, 0.0113, -0.0347, 0.0863, -0.4853, 0.0043, 0.0863, -0.4853, -0.0347, 0.1116, -0.4853, -0.0469, 0.0863, -0.4853, -0.0347, 0.1116, -0.4853, 0.0043, 0.0863, -0.4853, -0.0347, -0.0865, -0.4853, -0.0347, 0.0863, 0.0113, -0.0347, -0.0865, -0.4853, -0.0347, -0.1112, -0.4853, -0.0469, -0.1112, -0.4853, 0.0043, -0.1112, 0.0353, 0.0043, 0.0863, 0.0113, 0.0043, -0.0865, 0.0113, 0.0043, -0.0865, 0.0113, 0.0043, 0.0863, 0.0113, 0.0043, -0.0865, 0.0113, -0.0347, -0.1112, 0.0353, -0.0469, 0.1116, 0.0353, 0.0043, -0.1112, 0.0353, 0.0043, -0.1112, 0.0353, 0.0043, -0.0865, 0.0113, 0.0043, -0.1112, -0.4853, 0.0043, -0.1112, 0.0353, -0.0469, -0.1112, 0.0353, 0.0043, -0.1112, -0.4853, 0.0043, -0.0865, 0.0113, -0.0347, 0.0863, 0.0113, -0.0347, -0.0865, -0.4853, -0.0347, -0.0865, 0.0113, 0.0043, -0.0865, 0.0113, -0.0347, -0.0865, -0.4853, -0.0347, -0.0865, -0.4853, 0.0043, -0.1112, -0.4853, 0.0043, -0.0865, 0.0113, 0.0043, -0.0865, 0.0113, 0.0043, -0.0865, -0.4853, -0.0347, -0.0865, -0.4853, 0.0043, -0.0865, -0.4853, -0.0347, -0.1112, -0.4853, 0.0043, -0.0865, -0.4853, 0.0043, 0.1116, -0.4853, -0.0469, -0.1112, 0.0353, -0.0469, -0.1112, -0.4853, -0.0469, -0.1112, -0.4853, -0.0469, -0.0865, -0.4853, -0.0347, 0.1116, -0.4853, -0.0469, -0.1112, -0.4853, 0.0043, -0.1112, -0.4853, -0.0469, -0.1112, 0.0353, -0.0469)

[node name="CoinMachine" type="Node3D"]
script = ExtResource("1_ttn5t")

[node name="Boards" type="Node3D" parent="."]

[node name="CoinRainMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.33972, 0)

[node name="Coins" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00173918, 0.0526456)

[node name="Coin2" parent="Coins" instance=ExtResource("4_4k8hy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0800275, -0.149029, 0.191408)

[node name="CoinDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.522115, 0.894833)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CoinDetector"]
shape = SubResource("BoxShape3D_ttn5t")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00173918, 0.0526456)
use_collision = true

[node name="CSGBox3D3" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.245831, -0.119947)
material_override = SubResource("StandardMaterial3D_nsj7r")
size = Vector3(2.40137, 0.2, 1.01939)

[node name="CSGBox3D4" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(0.971334, 0, -0.23772, 0, 1, 0, 0.23772, 0, 0.971334, 1.23494, -0.105594, -0.111351)
size = Vector3(0.412109, 0.480475, 1.03658)

[node name="CSGBox3D5" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(0.971134, 0, 0.238533, 0, 1, 0, -0.238533, 0, 0.971134, -1.23744, -0.105225, -0.111351)
size = Vector3(0.412109, 0.481213, 1.03658)

[node name="Pusher" parent="." instance=ExtResource("4_5c2ke")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.176966, -0.671921)

[node name="Killzone" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Killzone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.74672, 0)
shape = SubResource("WorldBoundaryShape3D_xuo70")

[node name="Dropper" type="AnimatableBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.108, -0.364)
collision_layer = 2
script = ExtResource("6_1hgft")

[node name="DropLocation" type="Marker3D" parent="Dropper"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00678015, -0.075605)

[node name="CSGBakedMeshInstance3D" type="MeshInstance3D" parent="Dropper"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0808489, 0)
mesh = SubResource("ArrayMesh_1hgft")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Dropper"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0808489, 0)
shape = SubResource("ConcavePolygonShape3D_i7tb6")

[node name="VisibleOnScreenEnabler3D" type="VisibleOnScreenEnabler3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.658671, 1.08935, 0.0948133)
aabb = AABB(-0.0986113, -0.0276792, 0.287769, 0.197223, 0.0553583, 0.107079)
enable_node_path = NodePath("")
